fix: pixel perfect and z-index

--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ a {
 
 .dropdown-menu-list {
 	position: absolute;
-	top: 37px;
+	top: 35px;
 	left: -8px;
 
 	margin: 0;
